Tried fixing image visibility again on iPhone.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,15 +621,6 @@ header {
             margin: 0;
             padding: 0;
         }
-
-        /* change image visibility on small devices  */
-        #main-page-image {
-            height: 70vh;
-            width: 100%;
-            background: url("../images/healthy-green-shake.jpg") no-repeat center center fixed;
-            background-size: cover;
-            background-color: #C03221;
-        }
     }
     
 
@@ -665,7 +656,9 @@ header {
             width: 100%;
             background: url("../images/healthy-green-shake.jpg") no-repeat center center fixed;
             background-size: cover;
-            background-color: #C03221;
+            /* https://stackoverflow.com/questions/16785085/background-image-not-displaying-correctly-in-ios */
+            -webkit-transform: translateZ(0); 
+            background-size: cover;
         }
     }
 
